fix(device-message-entry): fix overflow on data

--- a/src/components/device/device-message-list/device-message-entry.scss
+++ b/src/components/device/device-message-list/device-message-entry.scss
@@ -85,5 +85,8 @@
   &__data-value {
     flex: 1;
     color: $font-color-secondary;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
